Fixes fixes fixes

--- a/EasyPayTests/Translations/dictionaries/dict.ua.json
+++ b/EasyPayTests/Translations/dictionaries/dict.ua.json
@@ -1,24 +1,41 @@
 ﻿{
-	"Name" : "Ім’я",
-	"User" :"Користувач",	
-    "Surname" : "Прізвище",        
-    "Addresses" : "Адреси",
-    "SomeText" : "Деякий текст",
-    "Profile" : "Профіль",
-    "MainPage" : "Головна сторінка",
-    "ChangeAvatar" : "Змінити Аватар",       
-    "PhoneNumber" : "Номер телефону",
-    "ChangePassword" : "Змінити пароль",
-    "Password" : "Пароль",
-    "NewPassword" : "Новий пароль",
-    "RepeatNewPassword" : "Повторно введіть новий пароль",
-    "UpdateProfile" : "Оновити профіль",
-    "UpdateUserInformation" : "Змінити дані користувача",
-    "Mariya" : "Марія",
-    "Chuikina" : "Чуйкіна",
-    "ConnectedUtilities" : "Підключені послуги",
-    "Payments" : "Платежі",
-    "PaymentsHistory" : "Історія платежів",
-    "RateInspectors" : "Рейтинг контролерів",
-    "Language" : "Мова"
+  "Name": "Ім’я",
+  "User": "Користувач",
+  "Surname": "Прізвище",
+  "Addresses": "Адреси",
+  "SomeText": "Деякий текст",
+  "Profile": "Профіль",
+  "MainPage": "Головна сторінка",
+  "ChangeAvatar": "Змінити Аватар",
+  "PhoneNumber": "Номер телефону",
+  "ChangePassword": "Змінити пароль",
+  "Password": "Пароль",
+  "NewPassword": "Новий пароль",
+  "RepeatNewPassword": "Повторно введіть новий пароль",
+  "UpdateProfile": "Оновити профіль",
+  "UpdateUserInformation": "Змінити дані користувача",
+  "Mariya": "Марія",
+  "Chuikina": "Чуйкіна",
+  "ConnectedUtilities": "Підключені послуги",
+  "Payments": "Платежі",
+  "PaymentsHistory": "Історія платежів",
+  "RateInspectors": "Рейтинг контролерів",
+  "Language": "Мова",
+
+  "SignIn": "Увійти",
+  "SignUp": "Зареєструватися",
+  "WelcomePageTitle": "Цей веб-сайт допоможе вам сплатити комунальні послуги.Щоб продовжити, потрібно увійти або зареєструватися, якщо у вас ще немає облікового запису.",
+  "WelcomePageFooter": "Розроблено",
+  "Email": "Електронна адреса",
+  "Login": "Увійти",
+  "LostYourPassword": "Забули свій пароль?",
+  "NewToSite": "Вперше на сайті?",
+  "CreateAccount": "Створити обліковий запис",
+  "LoginPageFooter": "Всі права захищені. Розроблено",
+  "Submit": "Підтвердити",
+  "HaveAnAccount": "Вже маєте акаунт?",
+  "ConfirmPassword": "Підтвердіть пароль",
+  "Or": "Або",
+  "RegisterPageHeader": "Реєстрація",
+  "RegisterPageFooter": "Вже маєте акаунт?"
 }
